Module13.6: Fully Responsive using Bootstrap

--- a/milestone-module/milestone03/module13.6-bootstrap-practice/index.html
+++ b/milestone-module/milestone03/module13.6-bootstrap-practice/index.html
@@ -14,36 +14,38 @@
     <!-- Header Section Start -->
     <header class="bg-light pb-5">
         <!-- Navber section -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+            <div class="container d-flex flex-nowrap">
                 <div class="container">
                     <a class="navbar-brand" href="#">
                         <img src="./images/question.png" alt="" width="30" height="24">
                     </a>
                     <a class="navbar-brand" href="#"><span class="text-success fw-bold">Penguin</span> Fasion</a>
                 </div>
-                <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto fw-bold text-nowrap mb-2 mb-lg-0">
-                        <li class="nav-item px-3">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item px-3">
-                            <a class="nav-link active" aria-current="page" href="#">Product</a>
-                        </li>
-                        <li class="nav-item px-3">
-                            <a class="nav-link active" aria-current="page" href="#">About us</a>
-                        </li>
-                        <li class="nav-item px-3">
-                            <a class="nav-link active" aria-current="page" href="#">Contact us</a>
-                        </li>
-                    </ul>
 
+                <div class="d-flex flex-column">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto fw-bold text-nowrap mb-2 mb-lg-0">
+                            <li class="nav-item px-3">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link active" aria-current="page" href="#">Product</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link active" aria-current="page" href="#">About us</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link active" aria-current="page" href="#">Contact us</a>
+                            </li>
+                        </ul>
+
+                    </div>
                 </div>
             </div>
         </nav>
@@ -52,17 +54,18 @@
         <!-- Top Section -->
         <section class="container">
             <div class="row gx-5 top-section">
-                <div class="col top-left mt-5">
+                <div class="col-12 col-md-6 col-lg-6 mb-5 top-left mt-5">
                     <h1 class="text-uppercase display-4 fw-bold"><span class="text-warning ">Be the Penguins</span> of
                         Winter</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur minus commodi voluptates quo
                         dicta quos?</p>
-                    <div class="bg-success rounded w-25 p-2" style="--bs-bg-opacity: .8;">
+                    <div class="bg-success rounded w-25 p-2 d-flex justify-content-center align-items-center"
+                        style="--bs-bg-opacity: .8;">
                         <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                        <span class="text-light text-uppercase">Buy Now</span>
+                        <span class="text-light text-uppercase text-nowrap">Buy Now</span>
                     </div>
                 </div>
-                <div class="col top-right">
+                <div class="col-12 col-md-6 col-lg-6 mb-5 top-right">
                     <img class="w-75 ms-5" src="./images/model.png" alt="model">
                 </div>
             </div>
@@ -78,7 +81,7 @@
                     <p>Woman Jacket</p>
                 </div>
                 <div class="row">
-                    <div class="col shadow-lg rounded">
+                    <div class="col-12 col-md-6 col-lg-4 mb-5 shadow-lg rounded">
                         <div class="wonman-card">
                             <div class="card border-0">
                                 <div class="w-100 p-2">
@@ -94,16 +97,17 @@
                                         <div class="col ps-0">
                                             <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
                                         </div>
-                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                        <div class="col bg-success rounded px-0 py-0 d-flex justify-content-center align-items-center"
+                                            style="--bs-bg-opacity: .8;">
                                             <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                            <span class="text-light text-uppercase p-2 text-nowrap">Buy Now</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col shadow-lg rounded">
+                    <div class="col-12 col-md-6 col-lg-4 mb-5 shadow-lg rounded">
                         <div class="wonman-card">
                             <div class="card border-0">
                                 <div class="w-100 p-2">
@@ -119,16 +123,17 @@
                                         <div class="col ps-0">
                                             <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
                                         </div>
-                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                        <div class="col bg-success rounded px-0 py-0 d-flex justify-content-center align-items-center"
+                                            style="--bs-bg-opacity: .8;">
                                             <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                            <span class="text-light text-uppercase p-2 text-nowrap">Buy Now</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col shadow-lg rounded">
+                    <div class="col-12 col-md-6 col-lg-4 mb-5 shadow-lg rounded">
                         <div class="wonman-card">
                             <div class="card border-0">
                                 <div class="w-100 p-2">
@@ -144,9 +149,10 @@
                                         <div class="col ps-0">
                                             <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
                                         </div>
-                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                        <div class="col bg-success rounded px-0 py-0 d-flex justify-content-center align-items-center"
+                                            style="--bs-bg-opacity: .8;">
                                             <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                            <span class="text-light text-uppercase p-2 text-nowrap">Buy Now</span>
                                         </div>
                                     </div>
                                 </div>
@@ -162,7 +168,7 @@
                     <p>Man Jacket</p>
                 </div>
                 <div class="row">
-                    <div class="col shadow-lg rounded">
+                    <div class="col-12 col-md-6 col-lg-4 mb-5 shadow-lg rounded">
                         <div class="wonman-card">
                             <div class="card border-0">
                                 <div class="w-100 p-2">
@@ -178,16 +184,17 @@
                                         <div class="col ps-0">
                                             <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
                                         </div>
-                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                        <div class="col bg-success rounded px-0 py-0 d-flex justify-content-center align-items-center"
+                                            style="--bs-bg-opacity: .8;">
                                             <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                            <span class="text-light text-uppercase p-2 text-nowrap">Buy Now</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col shadow-lg rounded">
+                    <div class="col-12 col-md-6 col-lg-4 mb-5 shadow-lg rounded">
                         <div class="wonman-card">
                             <div class="card border-0">
                                 <div class="w-100 p-2">
@@ -203,16 +210,17 @@
                                         <div class="col ps-0">
                                             <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
                                         </div>
-                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                        <div class="col bg-success rounded px-0 py-0 d-flex justify-content-center align-items-center"
+                                            style="--bs-bg-opacity: .8;">
                                             <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                            <span class="text-light text-uppercase p-2 text-nowrap">Buy Now</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col shadow-lg rounded">
+                    <div class="col-12 col-md-6 col-lg-4 mb-5 shadow-lg rounded">
                         <div class="wonman-card">
                             <div class="card border-0">
                                 <div class="w-100 p-2">
@@ -228,9 +236,10 @@
                                         <div class="col ps-0">
                                             <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
                                         </div>
-                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                        <div class="col bg-success rounded px-0 py-0 d-flex justify-content-center align-items-center"
+                                            style="--bs-bg-opacity: .8;">
                                             <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                            <span class="text-light text-uppercase p-2 text-nowrap">Buy Now</span>
                                         </div>
                                     </div>
                                 </div>
@@ -246,7 +255,7 @@
     <!-- col-12 col-sm-6 col-md-12 col-lg-12 -->
     <footer class="container">
         <section class="row  gy-5 mt-5">
-            <div class="col footer-left">
+            <div class="col-12 col-md-6 col-lg-6 mb-5 footer-left">
                 <!-- <div class="container part-1 rounded-3 shadow p-2 mb-4">
                     <div class="row d-flex justify-content-around gy-5">
                         <img class="col " src="./images/house.png" alt="house">
@@ -278,7 +287,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col footer-right">
+            <div class="col-12 col-md-6 col-lg-6 mb-5 footer-right">
                 <img class="w-100 mt-5" src="./images/shopping.png" alt="shopping">
             </div>
         </section>
