--- a/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
+++ b/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
@@ -14,32 +14,43 @@
     <!-- Navigation Section -->
     <header>
         <nav class="navbar w-100 navbar-expand-lg navbar-dark" style="background-color: #552dff;">
-            <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="./images/icons/logo.png" width="41" height="51" class="d-inline-block align-top" alt="">
-                    <span class="ms-2">Idea</span>
-                </a>
+            <div class="container d-flex flex-nowrap">
+                <div class="container d-flex justify-content-start align-items-center">
+                    <a class="navbar-brand" href="#">
+                        <img src="./images/icons/logo.png" class="d-inline-block align-top" alt="logo" width="41" height="51">
+                    </a>
+                    <a class="navbar-brand" href="#">Idea</a>
+                </div>
 
-                <div class="collapse navbar-collapse d-flex justify-content-end " id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto d-flex align-items-center">
-                        <li class="nav-item active">
-                        <a class="nav-link " href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="#">Works</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="navbar-brand" href="#">
-                                <img src="./images/icons/profile.png" width="51" height="51" class="d-inline-block align-top" alt="">
-                            </a>
-                        </li>
-                    </ul>
+                <div class="d-flex flex-column">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto fw-bold text-nowrap mb-2 mb-lg-0 d-flex align-items-center">
+                            <li class="nav-item px-3">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link active" aria-current="page" href="#">About</a>
+                            </li>
+                            <li class="nav-item px-3">
+                                <a class="nav-link active" aria-current="page" href="#">Works</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="navbar-brand" href="#">
+                                    <img src="./images/icons/profile.png" width="51" height="51" class="d-inline-block align-top" alt="">
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>
                 </div>
             </div>
         </nav>
+
     </header>
     <main>
         <!-- Top Section -->
