--- a/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
+++ b/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
@@ -89,7 +89,7 @@
                 <h1 class="text-primary my-5 ">Top Blog</h1>
                 <div class="row g-5">
                     <div class="col-md-12 col-lg-6 d-flex">
-                        <div class="row">
+                        <div class="row d-flex justify-content-between align-items-center">
                             <div class="col-12 col-md-4">
                                 <img width="177px" src="./images/blogs/blog-1.png" alt="image">
                             </div>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-6 d-flex">
-                        <div class="row">
+                        <div class="row d-flex justify-content-between align-items-center">
                             <div class="col-12 col-md-4">
                                 <img width="177px" src="./images/blogs/blog-2.png" alt="image">
                             </div>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-6 d-flex">
-                        <div class="row">
+                        <div class="row d-flex justify-content-between align-items-center">
                             <div class="col-12 col-md-4">
                                 <img width="177px" src="./images/blogs/blog-3.png" alt="image">
                             </div>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-6 d-flex">
-                        <div class="row">
+                        <div class="row d-flex justify-content-between align-items-center">
                             <div class="col-12 col-md-4">
                                 <img width="177px" src="./images/blogs/blog-4.png" alt="image">
                             </div>
@@ -145,7 +145,7 @@
             <h1 class="text-primary my-5 ">Lates Course</h1>
             <div class="row g-5 pe-5 pb-5">
                 <div class="col-12 col-md-6 col-lg-4">
-                    <img width="300px" src="./images/courses/course-1.png" alt="course">
+                    <img width="250px" src="./images/courses/course-1.png" alt="course">
                     <h2>React - The Complete Guide 2022</h2>
                     <p class="text-danger">Reed krakoff</p>
                     <span class="text-warning">
@@ -162,7 +162,7 @@
                     </span>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <img width="300px" src="./images/courses/course-2.png" alt="course">
+                    <img width="250px" src="./images/courses/course-2.png" alt="course">
                     <h2>Powerpoint 2022 <br> Master Powerpoint Course</h2>
                     <p class="text-danger">Walter Scott</p>
                     <span class="text-warning">
@@ -179,7 +179,7 @@
                     </span>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <img width="300px" src="./images/courses/course-3.png" alt="course">
+                    <img width="250px" src="./images/courses/course-3.png" alt="course">
                     <h2>The Complete JavaScript Course 2022</h2>
                     <p class="text-danger">Reed krakoff</p>
                     <span class="text-warning">
