--- a/milestone-module/milestone03/module14-panda-commerce-bootstrap/index.html
+++ b/milestone-module/milestone03/module14-panda-commerce-bootstrap/index.html
@@ -50,42 +50,42 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row bg-info bg-gradient my-5 p-5 d-flex align-items-center">
-                            <div class="col-lg-7">
+                            <div class="col-lg-7 col-md-7 col-12">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
                                 <h1>$420</h1>
                                 <button class="btn btn-warning">Buy Now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-5 col-12">
                                 <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="headphone">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row bg-info bg-gradient my-5 p-5 d-flex align-items-center">
-                            <div class="col-lg-7">
+                            <div class="col-lg-7 col-md-7 col-12">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in
                                     front of tv.</p>
                                 <h1>$1200</h1>
                                 <button class="btn btn-warning">Buy Now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-5 col-12">
                                 <img src="./images/banner-images/tv.png" class="d-block w-100" alt="tv">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row bg-info bg-gradient my-5 p-5 d-flex align-items-center">
-                            <div class="col-lg-7">
+                            <div class="col-lg-7 col-md-7 col-12">
                                 <h1>X-Box for your living room</h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in
                                     front of fake sports.</p>
                                 <h1>$600</h1>
                                 <button class="btn btn-warning">Buy Now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-5 col-12">
                                 <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="xbox">
                             </div>
                         </div>
@@ -106,6 +106,30 @@
     </header>
     <!-- Main Section Start -->
     <main>
+        <!-- Catagories Section -->
+        <section class="container">
+            <div class="row g-5 mb-5">
+                <div class="col-lg-4 col-md-6">
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Watch</h1>
+                        <img width="100px" height="100px" src="./images/categories/watch.png" alt="watch">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Bag</h1>
+                        <img width="100px" height="100px" src="./images/categories/bag.png" alt="bag">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Shoes</h1>
+                        <img width="100px" height="100px" src="./images/categories/shoes.png" alt="shoes">
+                    </div>
+                </div>
+            </div>
+        </section>
+
         
     </main>
     <!-- Footer Section Start -->
