--- a/milestone-module/milestone03/module14-panda-commerce-bootstrap/index.html
+++ b/milestone-module/milestone03/module14-panda-commerce-bootstrap/index.html
@@ -8,12 +8,41 @@
     <title>Panda Commerce Bootstrap</title>
     <!-- Bootstrap Stylesheet -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <!-- Header Section Start -->
     <header>
         <!-- Navigation Bar -->
+        <!-- <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#shoes">Shoes</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#backpack">Backpack</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#subscribe">Subscribe</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+        </div> -->
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
             <div class="container">
                 <a class="navbar-brand" href="#home">
@@ -43,19 +72,19 @@
                 </div>
             </div>
         </nav>
-
+        <br> <br>
         <!-- Carousel or Image Slider -->
         <div class="container" id="home">
             <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row bg-info bg-gradient my-5 p-5 d-flex align-items-center">
+                        <div class="row bg-info sliders-bg-color my-5 p-5 d-flex align-items-center">
                             <div class="col-lg-7 col-md-7 col-12">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
                                 <h1>$420</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn button-bg-color">Buy Now</button>
                             </div>
                             <div class="col-lg-5 col-md-5 col-12">
                                 <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="headphone">
@@ -63,13 +92,13 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient my-5 p-5 d-flex align-items-center">
+                        <div class="row bg-info sliders-bg-color my-5 p-5 d-flex align-items-center">
                             <div class="col-lg-7 col-md-7 col-12">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in
                                     front of tv.</p>
                                 <h1>$1200</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn button-bg-color">Buy Now</button>
                             </div>
                             <div class="col-lg-5 col-md-5 col-12">
                                 <img src="./images/banner-images/tv.png" class="d-block w-100" alt="tv">
@@ -77,13 +106,13 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient my-5 p-5 d-flex align-items-center">
+                        <div class="row bg-info sliders-bg-color my-5 p-5 d-flex align-items-center">
                             <div class="col-lg-7 col-md-7 col-12">
                                 <h1>X-Box for your living room</h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in
                                     front of fake sports.</p>
                                 <h1>$600</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn button-bg-color">Buy Now</button>
                             </div>
                             <div class="col-lg-5 col-md-5 col-12">
                                 <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="xbox">
@@ -110,19 +139,19 @@
         <section class="container">
             <div class="row g-5 mb-5">
                 <div class="col-lg-4 col-md-6">
-                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border watch-bg-color d-flex align-items-center justify-content-between rounded-3">
                         <h1 class="text-white">Watch</h1>
                         <img width="100px" height="100px" src="./images/categories/watch.png" alt="watch">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border bag-bg-color d-flex align-items-center justify-content-between rounded-3">
                         <h1 class="text-white">Bag</h1>
                         <img width="100px" height="100px" src="./images/categories/bag.png" alt="bag">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border shoe-bg-color d-flex align-items-center justify-content-between rounded-3">
                         <h1 class="text-white">Shoes</h1>
                         <img width="100px" height="100px" src="./images/categories/shoes.png" alt="shoes">
                     </div>
@@ -144,7 +173,7 @@
                             <h5>$120</h5>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="btn button-bg-color">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -158,7 +187,7 @@
                             <h5>$320</h5>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="btn button-bg-color">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -172,7 +201,7 @@
                             <h5>$350</h5>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="btn button-bg-color">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -193,7 +222,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="btn button-bg-color">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -207,7 +236,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="btn button-bg-color">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -222,7 +251,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="btn button-bg-color">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -230,13 +259,15 @@
         </section>
 
         <!-- Subscribe Section -->
-        <section class="container bg-primary d-flex justify-content-center py-5 my-5 align-items-center rounded-3" id="subscribe">
+        <section
+            class="container subscribe-bg-color d-flex justify-content-center py-5 my-5 align-items-center rounded-3"
+            id="subscribe">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
-                <input type="text" placeholder="Enter your Email" name="mail" id="mail">
+                <input class="form-control" type="text" placeholder="Enter your Email" name="mail" id="mail">
                 <br>
-                <button class="btn btn-warning">Submit</button>
+                <button class="btn button-bg-color">Submit</button>
             </div>
         </section>
 
