--- a/milestone-module/milestone02/module9-html-css-landing-page/index.html
+++ b/milestone-module/milestone02/module9-html-css-landing-page/index.html
@@ -15,15 +15,18 @@
             <a href="">Idea</a>
         </div>
         <nav class="logo2">
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Works</a>
-            <a href=""><img src="./images/icons/profile.png" alt="Profile Logo"></a>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Works</a></li>
+                <li><a href=""><img src="./images/icons/profile.png" alt="profile"></a></li>
+            </ul>
         </nav>
     </header>
     <!-- top players and top blogs -->
     <main>
         <section class="container">
+            <!-- Top Player Section -->
             <div class="top-players">
                 <h1 class="section-title">Top Players</h1>
                 <div class="players">
@@ -55,6 +58,7 @@
                 </div>
             </div>
             <hr>
+            <!-- Top Blog Section -->
             
         </section>
     </main>
