Module9: Top Blogs Added

--- a/milestone-module/milestone02/module9-html-css-landing-page/index.html
+++ b/milestone-module/milestone02/module9-html-css-landing-page/index.html
@@ -59,7 +59,47 @@
             </div>
             <hr>
             <!-- Top Blog Section -->
-            
+            <div class="top-blogs">
+                <h1 class="section-title">Top Blogs</h1>
+                <div class="blogs">
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="./images/blogs/blog-1.png" alt="blog-1">
+                        </div>
+                        <div class="blog-info">
+                            <h1>13 of My Favorite UI/UX Goodies</h1>
+                            <p><span>By </span>Danny Sapio</p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="./images/blogs/blog-2.png" alt="blog-2">
+                        </div>
+                        <div class="blog-info">
+                            <h1>UI cheat sheet: list vs grids</h1>
+                            <p><span>By </span>Tess Gadd</p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="./images/blogs/blog-3.png" alt="blog-3">
+                        </div>
+                        <div class="blog-info">
+                            <h1>7 typography tips for interface design</h1>
+                            <p><span>By </span>Jeremiah Lam</p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-img">
+                            <img src="./images/blogs/blog-4.png" alt="blog-4">
+                        </div>
+                        <div class="blog-info">
+                            <h1>Your logo is copied</h1>
+                            <p><span>By </span>Ferdinand Vogler</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
