Module9: Latest Course Section Added

--- a/milestone-module/milestone02/module9-html-css-landing-page/index.html
+++ b/milestone-module/milestone02/module9-html-css-landing-page/index.html
@@ -25,6 +25,7 @@
     </header>
     <!-- top players and top blogs -->
     <main>
+        <!-- Top Section -->
         <section class="container">
             <!-- Top Player Section -->
             <div class="top-players">
@@ -96,6 +97,72 @@
                         <div class="blog-info">
                             <h1>Your logo is copied</h1>
                             <p><span>By </span>Ferdinand Vogler</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Latest Courses Section -->
+        <section class="container">
+            <div class="latest-courses">
+                <h1 class="section-title">Latest Course</h1>
+                <div class="courses">
+                    <div class="course">
+                        <img src="./images/courses/course-1.png" alt="course-1">
+                        <h1>React - The Complete Guide 2022</h1>
+                        <p>Reed Krakoff</p>
+                        <div class="course-footer">
+                            <div class="course-footer-star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img class="star-5" src="./images/icons/star.png" alt="star">
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-footer-time">
+                                <img src="./images/icons/clock.png" alt="clock">
+                                <span>01:30 hr</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <img src="./images/courses/course-2.png" alt="course-2">
+                        <h1>Powerpoint 2022 Master Powerpoint Cour</h1>
+                        <p>Walter Scott</p>
+                        <div class="course-footer">
+                            <div class="course-footer-star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img class="star-5" src="./images/icons/star.png" alt="star">
+                                <span>4.3</span>
+                            </div>
+                            <div class="course-footer-time">
+                                <img src="./images/icons/clock.png" alt="clock">
+                                <span>01:20 hr</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <img src="./images/courses/course-3.png" alt="course-3">
+                        <h1>The Complete JavaScript Course 2022</h1>
+                        <p>Reed Krakoff</p>
+                        <div class="course-footer">
+                            <div class="course-footer-star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img src="./images/icons/star.png" alt="star">
+                                <img class="star-5" src="./images/icons/star.png" alt="star">
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-footer-time">
+                                <img src="./images/icons/clock.png" alt="clock">
+                                <span>01:30 hr</span>
+                            </div>
                         </div>
                     </div>
                 </div>
