--- a/milestone-module/milestone03/module15-tailwind-css/index.html
+++ b/milestone-module/milestone03/module15-tailwind-css/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,92 @@
     <!-- Tailwind CSS Link -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    <h1>I have a secret tail that you do not know</h1>
-    <h3>I will expose it today</h3>
-    <p>This will be fun</p>
+    <h1 class="text-5xl font-bold p-4 bg-yellow-400 text-center rounded-lg mx-16">Introduciton to Tailwind CSS</h1><br>
+    <h3 class="text-2xl font-bold bg-red-400 text-center p-3 mx-80 rounded-lg">15.1 Getting started with tailwind and build a button</h3><br>
+    <!-- 15.1 Getting started with tailwind and build a button -->
     <button class="bg-blue-600 text-white p-2">Click Me</button>
+
+    <h3 class="text-2xl font-bold bg-red-400 text-center p-3 mx-80 rounded-lg">15.2 Compare Tailwind classes with bootstrap classes</h3><br>
+    <!-- 15.2 Compare Tailwind classes with bootstrap classes -->
+    <div>
+        <h1 class="text-6xl">I have a secret tail that you do not know</h1>
+        <h3 class="text-3xl font-extrabold">I will expose it today</h3>
+        <h3 class="text-3xl font-bold">I will expose it today</h3>
+        <h3 class="text-3xl">I will expose it today</h3>
+        <h3 class="text-3xl">I will expose it today</h3>
+        <p>This will be fun</p>
+    </div>
+    <section>
+        <div class="container mx-auto border-4 border-red-500/100 ">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis fugit illum odit dicta! Veritatis
+                aperiam nam aliquam corrupti dolores architecto!</p>
+        </div>
+        <div class="container mx-auto border-4 border-green-500/100 ml-10">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis fugit illum odit dicta! Veritatis
+                aperiam nam aliquam corrupti dolores architecto!</p>
+        </div>
+        <div class="container mx-auto border-4 border-yellow-500/100 -ml-10">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis fugit illum odit dicta! Veritatis
+                aperiam nam aliquam corrupti dolores architecto!</p>
+        </div>
+        <div class="container mx-auto border-4 border-indigo-500/100 ">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis fugit illum odit dicta! Veritatis
+                aperiam nam aliquam corrupti dolores architecto!</p>
+        </div>
+    </section>
+
+    <h3 class="text-2xl font-bold bg-red-400 text-center p-3 mx-80 rounded-lg">15.3 Tailwind Flexbox and compare with bootstrap</h3><br>
+    <!-- 15.3 Tailwind Flexbox and compare with bootstrap -->
+    <section>
+        <h2 class="text-5xl font-bold bg-purple-200">My first Heading</h2>
+        <h2 class="text-5xl font-bold bg-purple-200/100">My first Heading</h2>
+        <h2 class="text-5xl font-bold bg-red-200/50">My first Heading</h2>
+        <div class="flex justify-evenly">
+            <div class="h-64 bg-blue-900 w-96 flex justify-center items-center">
+                <h2 class="text-5xl font-bold bg-red-500">First Heading</h2>
+            </div>
+            <div>
+                <h2 class="text-5xl font-bold bg-red-200">Second Heading</h2>
+            </div>
+        </div>
+    </section>
+
+    <h3 class="text-2xl font-bold bg-red-400 text-center p-3 mx-80 rounded-lg">15.4 Explore Tailwind grid with row and column span</h3><br>
+    <!-- 15.4 Explore Tailwind grid with row and column span -->
+    <h2 class="text-5xl p-5">My Grid Layout</h2>
+    <section class="bg-yellow-500 grid grid-cols-5">
+        <div class="bg-blue-400 m-4 p-4 col-span-3">1</div>
+        <div class="bg-blue-400 m-4 p-4">2</div>
+        <div class="bg-blue-400 m-4 p-4 row-span-4">3</div>
+        <div class="bg-blue-400 m-4 p-4">4</div>
+        <div class="bg-blue-400 m-4 p-4">5</div>
+        <div class="bg-blue-400 m-4 p-4">6</div>
+        <div class="bg-blue-400 m-4 p-4">7</div>
+        <div class="bg-blue-400 m-4 p-4">8</div>
+        <div class="bg-blue-400 m-4 p-4">9</div>
+        <div class="bg-blue-400 m-4 p-4">10</div>
+        <div class="bg-blue-400 m-4 p-4">11</div>
+        <div class="bg-blue-400 m-4 p-4">12</div>
+        <div class="bg-blue-400 m-4 p-4">13</div>
+        <div class="bg-blue-400 m-4 p-4">14</div>
+        <div class="bg-blue-400 m-4 p-4">15</div>
+        <div class="bg-blue-400 m-4 p-4">16</div>
+        <div class="bg-blue-400 m-4 p-4">17</div>
+        <div class="bg-blue-400 m-4 p-4">18</div>
+        <div class="bg-blue-400 m-4 p-4">19</div>
+        <div class="bg-blue-400 m-4 p-4">20</div>
+    </section>
+    <br>
+    <section class="bg-purple-400 grid grid-cols-3 p-2 gap-5">
+        <div class="bg-blue-400 p-4 col-span-3">1</div>
+        <div class="bg-blue-400 p-4 col-span-2 row-span-2 h-64">2</div>
+        <div class="bg-blue-400 p-4 row-span-2">3</div>
+        <div class="bg-blue-400 p-4 col-span-3">4</div>
+    </section>
+
+    
 </body>
+
 </html>
