Module15: Benefits Section Added

--- a/milestone-module/milestone03/module15-tailwind-css/index2.html
+++ b/milestone-module/milestone03/module15-tailwind-css/index2.html
@@ -53,7 +53,7 @@
         <!-- Woman Jackets Section -->
         <section class="mb-16">
             <h1 class="text-5xl font-bold my-8">Woman Jackets</h1>
-            <div class="grid grid-cols-3 gap-7">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <!-- Jacket-1  -->
                 <div class="p-4 shadow-lg rounded-xl">
                     <div class="p-5 bg-slate-100 rounded-xl">
@@ -130,7 +130,7 @@
         <!-- Man Jackets Section -->
         <section class="mb-8">
             <h1 class="text-5xl font-bold my-8">Man Jackets</h1>
-            <div class="grid grid-cols-3 gap-7">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <!-- Jacket-1  -->
                 <div class="p-4 shadow-lg rounded-xl">
                     <div class="p-5 bg-slate-100 rounded-xl">
@@ -204,7 +204,40 @@
                 </div>
             </div>
         </section>
+        <!-- Our Benefits -->
+        <section>
+            <div class="grid md:grid-cols-1 lg:grid-cols-2 gap-7">
+                <div class="bg-white-600 flex items-center p-6 shadow-lg rounded-lg ">
+                    <img class="w-20 h-20" src="./images/house.png" alt="house">
+                    <div class="ml-8">
+                        <h1 class="text-3xl font-semibold">Find the Perfect Fit</h1>
+                        <p>Everbody is different. which is why we offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class=" row-span-3 ">
+                    <img src="./images/shopping.png" alt="shopping">
+                </div>
+                <div class="bg-white-600 flex  items-center p-6 shadow-lg rounded-lg ">
+                    <img class="w-20 h-20" src="./images/box.png" alt="house">
+                    <div class="ml-8">
+                        <h1 class="text-3xl font-semibold">Free Exchanges</h1>
+                        <p>One of the many reasons you can shop with peace of mind.</p>
+                    </div>
+                </div>
+                <div class="bg-white-600 flex items-center p-6 shadow-lg rounded-lg ">
+                    <img class="w-20 h-20" src="./images/question.png" alt="house">
+                    <div class="ml-8">
+                        <h1 class="text-3xl font-semibold">Contact Our Seller</h1>
+                        <p>They are here to help you. That's quite literally what we pay them for.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <br><br>
     </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
