Module24: Explore getElementsByClassName and querySelector and querySelectorAll

--- a/milestone-module/milestone05/module24-js-works-&-DOM/02js-DOM/03dom.html
+++ b/milestone-module/milestone05/module24-js-works-&-DOM/02js-DOM/03dom.html
@@ -9,6 +9,12 @@
         /* #second-title{
             background-color: rgba(210, 105, 30, 0.322);
         } */
+        /* .blog{
+            border: 2px solid orange;
+            margin: 5px;
+            padding: 10px;
+            border-radius: 10px;
+        } */
     </style>
 </head>
 <body>
@@ -16,21 +22,21 @@
         <h1>Welcome to my blog website</h1>
     </header>
     <main>
-        <section>
+        <section class="blogs">
             <!-- article*3>h3{My Awesome Blog-$}+p>lorem-25 -->
-            <article>
+            <article class="blog">
                 <h3 id="first-title">My Awesome Blog-1</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptatum alias laboriosam nisi quas veritatis iusto id atque, laudantium consequuntur, a, cumque voluptatibus ipsa aliquam? Cupiditate eius impedit consectetur aliquid.</p>
             </article>
-            <article>
+            <article id="second-blog" class="blog">
                 <h3 id="second-title">My Awesome Blog-2</h3>
                 <p>Reiciendis iste eaque provident, enim, aspernatur voluptatum culpa nam excepturi optio autem pariatur quisquam in expedita nihil nostrum velit soluta minus cupiditate dolor, omnis illo fugiat! Ad voluptatibus facere sed!</p>
             </article>
-            <article>
+            <article class="blog">
                 <h3 id="third-title">My Awesome Blog-3</h3>
                 <p>Molestiae doloribus accusamus, veritatis officiis quaerat corporis, eligendi laborum impedit cum vero possimus, blanditiis provident non! Quod eaque harum quaerat sequi sunt modi, inventore ipsa quibusdam! Optio praesentium vel cum.</p>
             </article>
-            <article>
+            <article class="blog">
                 <h3 id="fourth-title">My Awesome Blog-4</h3>
                 <p>Molestiae doloribus accusamus, veritatis officiis quaerat corporis, eligendi laborum impedit cum vero possimus, blanditiis provident non! Quod eaque harum quaerat sequi sunt modi, inventore ipsa quibusdam! Optio praesentium vel cum.</p>
             </article>
@@ -72,11 +78,11 @@
         const blogDetails = document.getElementsByTagName('p');
         for (const p of blogDetails) {
             console.log(p);
-            
         }
 
         //24.5 Capture and change Element by using getElementById
 
+        // Explore getElementById
         const secondTitle = document.getElementById('second-title');
         console.log(secondTitle);     
         console.log(document.getElementById('second-title').style);       
@@ -93,6 +99,56 @@
         console.log(document.getElementById('fourth-title'));
         console.log(document.getElementById('fourth-title').innerText = 'I can do magic');
         
+
+        // 24.6 Explore getElementsByClassName and querySelectorAll
+
+        // Explore getElementsByClassName
+        console.log(document.getElementsByClassName('blog'));
+        console.log(document.getElementsByTagName('article'));
+
+        const blogs = document.getElementsByClassName('blog');
+        for (const blog of blogs) {
+            // console.log(blog);
+            blog.style.border = '2px solid orange';
+            blog.style.margin = '5px';
+            blog.style.padding = '10px';
+            blog.style.borderRadius = '10px';
+        }
+
+        // Explore querySelectorAll
+        console.log(document.querySelector('.blog'));
+        console.log(document.querySelectorAll('.blog'));
+        console.log(document.querySelectorAll('p'));
+        console.log(document.querySelectorAll('#second-title'));
+        console.log(document.querySelectorAll('#second-blog p'));
+
+        // 1. getElementsByTagName
+        // 2. getElementById
+        // 3. getElementsByClassName
+        // 4. querySelector - select only 1st element
+        // 5. querySelectorAll - select all elements
+
+        // 1. getElementsByTagName
+        console.log(document.getElementsByTagName('p'));
+        console.log(document.getElementsByTagName('article'));
+        console.log(document.getElementsByTagName('h3'));
+
+        // 2. getElementById
+        console.log(document.getElementById('second-title'));
+        console.log(document.getElementById('second-blog'));
+
+        // 3. getElementsByClassName
+        console.log(document.getElementsByClassName('blog'));
+
+        // 4. querySelector
+        console.log(document.querySelector('p'));
+        console.log(document.querySelector('.blog'));
+        console.log(document.querySelector('#second-title'));
+
+        // 5. querySelectorAll
+        console.log(document.querySelectorAll('.blog'));
+        console.log(document.querySelectorAll('#second-title'));
+
 
     </script>
 </body>
